syntax="proto3";
import "protos/data/student/student.proto";
import "protos/kitchen/custom_option.proto";
package scalars;

message Scalars {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    uint32 uint32 = 5;
    uint64 uint64 = 6;
    sint32 sint32 = 7;
    sint64 sint64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool bool = 13;
    string string = 14;
    bytes bytes = 15;
    string name = 16;
    User User = 17;
    repeated User Users = 18;
    repeated student.Student Student = 19;
    UserType UserType = 20;
}

message User {
    string Name = 1;
    string Age = 2;
}

enum UserType {
    Worker = 0;
    Man = 1;
    Woman = 3;
}

message GetUserListRequest {
}

message GetUserListResponse {
}

service UserService {
    rpc GetUserList (GetUserListRequest) returns (GetUserListResponse){
        option (base.my_option)="test";
    }
}